--- a/Workbit.App/Views/Shared/_Layout.cshtml
+++ b/Workbit.App/Views/Shared/_Layout.cshtml
@@ -160,7 +160,7 @@
 								<a class="nav-link @Html.IsActive("Profile", "Manager")" asp-area="Manager" asp-controller="Manager" asp-action="Profile">Profile</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link @Html.IsActive("TeamEmployees", "Employee")" asp-area="Manager" asp-controller="Employee" asp-action="TeamEmployees">Team</a>
+								<a class="nav-link @Html.IsActive("Team", "Employee")" asp-area="Manager" asp-controller="Employee" asp-action="Team">Team</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link @Html.IsActive("DepartmentJobs", "Manager")" asp-area="Manager" asp-controller="Manager" asp-action="DepartmentJobs">Jobs</a>
