last changes in the manager area

--- a/Workbit.App/Areas/Admin/Views/Admin/UserDetails.cshtml
+++ b/Workbit.App/Areas/Admin/Views/Admin/UserDetails.cshtml
@@ -84,7 +84,7 @@
         </li>
         <li>
             <span class="details-label">Date of Birth:</span>
-            <span class="details-value">@Model.DateOfBirth.ToShortDateString()</span>
+            <span class="details-value">@Model.DateOfBirth.ToString(DateFormatShort)</span>
         </li>
         <li>
             <span class="details-label">Role:</span>
