--- a/Workbit.App/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Workbit.App/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Workbit
 @using Workbit.Core.Models.Admin;
+@using static Workbit.Common.DataConstants.Constants;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
