--- a/Workbit.App/Areas/Manager/Views/Job/Details.cshtml
+++ b/Workbit.App/Areas/Manager/Views/Job/Details.cshtml
@@ -120,8 +120,8 @@
             <p><em>No employees are currently assigned to this job.</em></p>
         }
 
-        <a asp-controller="Manager" asp-action="DepartmentJobs"class="back-btn">
-            ← Back to Jobs of the Department
+        <a asp-area="Manager" asp-controller="Job" asp-action="All"class="back-btn">
+            Back to Jobs 
         </a>
     </div>
 </div>
