--- a/Workbit.App/Areas/Manager/Views/Manager/Profile.cshtml
+++ b/Workbit.App/Areas/Manager/Views/Manager/Profile.cshtml
@@ -399,7 +399,7 @@
                                    asp-controller="Manager"
                                    asp-action="ColleagueDetails"
                                    asp-route-userId="@colleague.Id"
-                                   class="view-colleague-btn">
+                                   class="view-colleague-btn" style="color:white;">
                                     View
                                 </a>
                             </li>
