--- a/Workbit.App/Views/Shared/_Layout.cshtml
+++ b/Workbit.App/Views/Shared/_Layout.cshtml
@@ -163,10 +163,10 @@
 								<a class="nav-link @Html.IsActive("Team", "Employee")" asp-area="Manager" asp-controller="Employee" asp-action="Team">Team</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link @Html.IsActive("DepartmentJobs", "Manager")" asp-area="Manager" asp-controller="Manager" asp-action="DepartmentJobs">Jobs</a>
+								<a class="nav-link @Html.IsActive("All", "Job")" asp-area="Manager" asp-controller="Job" asp-action="All">Jobs</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link @Html.IsActive("ManagerPaymentDashboard", "Manager")" asp-area="Manager" asp-controller="Payment" asp-action="ManagerPaymentDashboard">Payment</a>
+								<a class="nav-link @Html.IsActive("Dashboard", "Payment")" asp-area="Manager" asp-controller="Payment" asp-action="Dashboard">Payment</a>
 							</li>	
 						}
 
