--- a/Workbit.App/Areas/Manager/Views/_ViewImports.cshtml
+++ b/Workbit.App/Areas/Manager/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using Workbit
 @using Workbit.Core.Models.Manager;
 @using Workbit.Core.Models.Employee;
+@using Workbit.Core.Models.Job;
+@using Workbit.Core.Models.Payment;
 @using static Workbit.Common.DataConstants.Constants;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
