--- a/Workbit.App/Views/Manager/EmployeeDetailsForManager.cshtml
+++ b/Workbit.App/Views/Manager/EmployeeDetailsForManager.cshtml
@@ -1,4 +1,4 @@
-﻿@model Workbit.Core.Models.Employee.EmployeeReadDto
+﻿@model Workbit.Core.Models.Employee.EmployeeViewModel
 @{
     ViewData["Title"] = "Employee Details";
 }
