--- a/Workbit.App/Views/Shared/_Layout.cshtml
+++ b/Workbit.App/Views/Shared/_Layout.cshtml
@@ -142,7 +142,7 @@
 						@if (User.IsCeo())
 						{
 							<li class="nav-item">
-								<a class="nav-link @Html.IsActive("Profile", "Ceo")" asp-area="Ceo" asp-controller="Ceo" asp-action="Peofile">Dashboard</a>
+								<a class="nav-link @Html.IsActive("Profile", "Ceo")" asp-area="Ceo" asp-controller="Ceo" asp-action="Profile">Dashboard</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link @Html.IsActive("All", "Department")" asp-area="Ceo" asp-controller="Department" asp-action="All">Departments</a>
